<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/ic_title_home" />
        <item
            android:id="@+id/nav_programming"
            android:title="@string/ic_title_programming" />
        <item
            android:id="@+id/nav_science"
            android:title="@string/ic_title_science" />
        <item
            android:id="@+id/nav_managment"
            android:title="@string/ic_title_management" />
        <item
            android:id="@+id/nav_environment"
            android:title="@string/ic_title_environment" />
        <item
            android:id="@+id/nav_society"
            android:title="@string/ic_title_society" />
        <item
            android:id="@+id/economy"
            android:title="@string/ic_title_economy" />
        <item
            android:id="@+id/nav_business"
            android:title="@string/ic_title_business" />
        <item
            android:id="@+id/nav_culture"
            android:title="@string/ic_title_culture" />
    </group>
</menu>