<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="135dp"
    android:layout_height="200dp"
    android:layout_margin="5dp"
    android:layout_marginStart="4dp"
    android:id="@+id/card_view"
    android:layout_marginLeft="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="#455A64"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:maxLines="2"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/book_image" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:maxLines="1"
            android:text="@string/author"
            android:textColor="#7C4DFF"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>

